chore: update installation paths and enhance logging macros
- Changed the installation destination for shared libraries from `bin` to `lib` in `CMakeLists.txt` for better compliance with standard directory structures.
- Added `LOG_ERROR` macro in `zot.h` for consistent and detailed error logging with function context.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,5 +33,5 @@ add_library(${TARGET} SHARED)
 target_sources(${TARGET} PRIVATE ${SOURCE_FILES})
 
 # Install targets
-install(TARGETS ${TARGET} DESTINATION bin)
+install(TARGETS ${TARGET} DESTINATION lib)
 install(FILES ${HEADER_FILES} DESTINATION include)
