Ensure memalloc include directory exists at configure time

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,13 +31,15 @@ if(NOT TARGET memalloc::memalloc)
     STAMP_DIR ${CMAKE_BINARY_DIR}/stamps
     UPDATE_DISCONNECTED TRUE
   )
+  file(MAKE_DIRECTORY "${CMAKE_BINARY_DIR}/memalloc/include")
 
-  add_library(memalloc_imported IMPORTED)
+  add_library(memalloc_imported STATIC IMPORTED)
   add_dependencies(memalloc_imported MemAlloc)
   set_target_properties(memalloc_imported PROPERTIES
     IMPORTED_LOCATION "${CMAKE_BINARY_DIR}/memalloc/lib/${CMAKE_STATIC_LIBRARY_PREFIX}memalloc${CMAKE_STATIC_LIBRARY_SUFFIX}"
     INTERFACE_INCLUDE_DIRECTORIES "${CMAKE_BINARY_DIR}/memalloc/include"
   )
+
   add_library(memalloc::memalloc ALIAS memalloc_imported)
 endif()
 
