Add Android logging support and standardize project formatting
This commit introduces conditional support for the Android Logging API.

Changes include:
- CMake: Added `USE_ANDROID_LOG` option to toggle Android NDK logging.
- CMake: Improved readability by wrapping long function calls and
  standardizing indentation.
- CMake: Propagated `ENABLE_SANITIZERS` to the `MemAlloc` external project.
- Header: Implemented conditional `LOG` and `LOG_ERROR` macros to use
  `__android_log_print` when targeting Android.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,10 @@
 cmake_minimum_required(VERSION 3.15)
 
-project(Zot VERSION 2.1.2 DESCRIPTION "zot memory manager" LANGUAGES C)
+project(
+  Zot
+  VERSION 2.1.2
+  DESCRIPTION "zot memory manager"
+  LANGUAGES C)
 
 set(TARGET zot)
 
@@ -8,7 +12,9 @@ set(CMAKE_C_STANDARD 23)
 set(CMAKE_C_STANDARD_REQUIRED ON)
 
 option(BUILD_EXECUTABLE "Build test executable " ON)
-option(ENABLE_SANITIZERS "Enable Address and Undefined Behaviours Sanitizers" OFF)
+option(ENABLE_SANITIZERS "Enable Address and Undefined Behaviours Sanitizers"
+       OFF)
+option(USE_ANDROID_LOG "Use Android Log API" OFF)
 
 message(STATUS "Compiler: ${CMAKE_C_COMPILER_ID}")
 message(STATUS "System Processor: ${CMAKE_SYSTEM_PROCESSOR}")
@@ -27,22 +33,23 @@ if(NOT TARGET memalloc::memalloc)
     GIT_SHALLOW TRUE
     INSTALL_DIR ${CMAKE_BINARY_DIR}/memalloc
     CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=<INSTALL_DIR> -DBUILD_EXECUTABLE=OFF
+               -DENABLE_SANITIZERS=${ENABLE_SANITIZERS}
     BUILD_ALWAYS OFF
     STAMP_DIR ${CMAKE_BINARY_DIR}/stamps
-    UPDATE_DISCONNECTED TRUE
-  )
+    UPDATE_DISCONNECTED TRUE)
   file(MAKE_DIRECTORY "${CMAKE_BINARY_DIR}/memalloc/include")
 
   add_library(memalloc_imported STATIC IMPORTED)
   add_dependencies(memalloc_imported MemAlloc)
-  set_target_properties(memalloc_imported PROPERTIES
-    IMPORTED_LOCATION "${CMAKE_BINARY_DIR}/memalloc/lib/${CMAKE_STATIC_LIBRARY_PREFIX}memalloc${CMAKE_STATIC_LIBRARY_SUFFIX}"
-    INTERFACE_INCLUDE_DIRECTORIES "${CMAKE_BINARY_DIR}/memalloc/include"
-  )
+  set_target_properties(
+    memalloc_imported
+    PROPERTIES
+      IMPORTED_LOCATION
+      "${CMAKE_BINARY_DIR}/memalloc/lib/${CMAKE_STATIC_LIBRARY_PREFIX}memalloc${CMAKE_STATIC_LIBRARY_SUFFIX}"
+      INTERFACE_INCLUDE_DIRECTORIES "${CMAKE_BINARY_DIR}/memalloc/include")
 
   add_library(memalloc::memalloc ALIAS memalloc_imported)
 endif()
-
 
 set(HEADER_FILES include/zot.h)
 set(SOURCE_FILES src/zot.c)
@@ -50,14 +57,16 @@ set(SOURCE_FILES src/zot.c)
 add_library(${TARGET} STATIC ${SOURCE_FILES})
 add_library(zot::${TARGET} ALIAS ${TARGET})
 
-target_include_directories(${TARGET}
-  PUBLIC
-  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-  $<INSTALL_INTERFACE:include>
-)
+target_include_directories(
+  ${TARGET} PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+                   $<INSTALL_INTERFACE:include>)
 target_link_libraries(${TARGET} PUBLIC memalloc::memalloc)
+if(${USE_ANDROID_LOG})
+  target_compile_definitions(${TARGET} PRIVATE USE_ANDROID_LOG)
+endif()
 
-if(CMAKE_BUILD_TYPE STREQUAL "Debug" OR CMAKE_BUILD_TYPE STREQUAL "RelWithDebInfo")
+if(CMAKE_BUILD_TYPE STREQUAL "Debug" OR CMAKE_BUILD_TYPE STREQUAL
+                                        "RelWithDebInfo")
   if(MSVC)
     target_compile_options(${TARGET} PRIVATE /Zi /Od /RTC1)
     target_link_options(${TARGET} PRIVATE /DEBUG)
@@ -65,12 +74,17 @@ if(CMAKE_BUILD_TYPE STREQUAL "Debug" OR CMAKE_BUILD_TYPE STREQUAL "RelWithDebInf
     target_compile_options(${TARGET} PRIVATE -g -O0 -fno-omit-frame-pointer)
   endif()
   if(ENABLE_SANITIZERS AND NOT MSVC)
-    target_compile_options(${TARGET} PRIVATE -fsanitize=address -fsanitize=undefined)
-    target_link_options(${TARGET} PRIVATE -fsanitize=address -fsanitize=undefined)
+    message(STATUS "Sanitizers Loading")
+    target_compile_options(${TARGET} PRIVATE -fsanitize=address
+                                             -fsanitize=undefined)
+    target_link_options(${TARGET} PRIVATE -fsanitize=address
+                        -fsanitize=undefined)
   endif()
 endif()
 
-if(CMAKE_SYSTEM_PROCESSOR MATCHES "arm" OR CMAKE_SYSTEM_PROCESSOR MATCHES "aarch64" AND NOT MSVC)
+if(CMAKE_SYSTEM_PROCESSOR MATCHES "arm"
+   OR CMAKE_SYSTEM_PROCESSOR MATCHES "aarch64"
+   AND NOT MSVC)
   include(CheckCCompilerFlag)
   check_c_compiler_flag("-mfpu=neon" HAS_NEON_FLAG)
   if(HAS_NEON_FLAG)
@@ -78,25 +92,26 @@ if(CMAKE_SYSTEM_PROCESSOR MATCHES "arm" OR CMAKE_SYSTEM_PROCESSOR MATCHES "aarch
   endif()
 endif()
 
-# if(BUILD_EXECUTABLE)
-#   add_executable(${TARGET}_exe main.c)
-#   target_link_libraries(${TARGET}_exe PRIVATE ${TARGET})
-#   target_include_directories(${TARGET}_exe PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
-# endif()
+# if(BUILD_EXECUTABLE) add_executable(${TARGET}_exe main.c)
+# target_link_libraries(${TARGET}_exe PRIVATE ${TARGET})
+# target_include_directories(${TARGET}_exe PRIVATE
+# ${CMAKE_CURRENT_SOURCE_DIR}/include) endif()
 
 include(GNUInstallDirs)
 
-install(TARGETS ${TARGET}
+install(
+  TARGETS ${TARGET}
   EXPORT ZotTargets
   ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
-  INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
+  INCLUDES
+  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
 
 install(FILES ${HEADER_FILES} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
 
-install(EXPORT ZotTargets
+install(
+  EXPORT ZotTargets
   FILE zot-config.cmake
   NAMESPACE zot::
   DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/zot)
 
-export(EXPORT ZotTargets
-  FILE "${CMAKE_BINARY_DIR}/zot-config.cmake")
+export(EXPORT ZotTargets FILE "${CMAKE_BINARY_DIR}/zot-config.cmake")
